<resources>
    <string name="app_name">牛蛙呐</string>
    <string name="activity_main_index_string">首页</string>
    <string name="activity_main_community_string">社区</string>
    <string name="activity_main_subscription_string">关注</string>
    <string name="activity_main_message_string">消息</string>
    <string name="activity_main_me_string">我的</string>
    <string name="fragment_index_top_bar_search_string">搜索感兴趣的内容</string>
    <string name="index_article_info_readcount_string">阅读</string>
    <string name="index_article_info_commentcount_string">评论</string>
    <string name="index_article_info_likecount_string">赞</string>
    <string name="index_article_info_dislikecount_string">踩</string>
    <string name="me_login_click_string">点击登录</string>
    <string name="me_login_desc_string">成就你的写作梦想</string>
    <string name="me_article_string">我的文章</string>
    <string name="me_draft_string">我的草稿</string>
    <string name="me_like_string">我的收藏</string>
    <string name="me_like_and_collection">赞和收藏</string>
    <string name="me_storage_string">我的物品</string>
    <string name="me_pop_string">召唤宠物</string>
    <string name="me_coin_string">牛币</string>
    <string name="me_vip_string">会员</string>
    <string name="me_lottery_string">抽奖</string>
    <string name="me_rank_string">排行</string>
    <string name="me_user_login_title_code_string">手机验证码登录</string>
    <string name="me_user_login_title_pwd_string">账号密码登录</string>
    <string name="me_user_login_get_code_string">获取验证码</string>
    <string name="me_user_get_code_string">已发送验证码到您的邮箱</string>
    <string name="me_user_login_code_hint_string">请输入验证码</string>
    <string name="me_user_login_pwd_hint_string">请输入密码</string>
    <string name="me_user_login_pwd_check_hint_string">请输入相同密码</string>
    <string name="me_user_login_account_code_hint_string">请输入手机号</string>
    <string name="me_user_login_account_pwd_hint_string">请输入手机号或邮箱</string>
    <string name="me_user_login_account_pwd_hint_2_string">请根据选择输入手机号或邮箱</string>
    <string name="me_user_register_name">请输入昵称</string>
    <string name="user_protocol_title_string">牛蛙呐用户协议 - 牛蛙呐</string>
    <string name="privacy_policy_title_string">隐私政策 - 牛蛙呐</string>
    <string name="user_login_problem_string">登录遇到的问题</string>
    <string name="user_register_string">加入牛蛙呐</string>
    <string name="user_no_have_count">没有牛蛙呐账号?</string>
    <string name="user_login_community_login_text_string">社交帐号直接登录</string>
    <string name="user_login_mustread_popup_string">请先勾选同意后再进行登录</string>
    <string name="go_login">立即前往登录</string>
    <string name="me_user_subscribe_string">关注</string>
    <string name="me_user_fans_string">粉丝</string>
    <string name="me_user_article_count_string">篇文章</string>
    <string name="me_user_draft_count_string">个草稿</string>
    <string name="me_user_like_count_string">点赞</string>
    <string name="me_user_collection_count">收藏</string>
    <string name="me_user_nb_count_string">总资产:</string>
    <string name="me_user_look_money_string">查看</string>
    <string name="me_setting_string">设置</string>
    <string name="me_settings_logout_string">退出当前账号</string>
    <string name="index_tag_setting_title">标签管理</string>
    <string name="index_tag_setting_chosen_title">已经添加标签</string>
    <string name="index_tag_setting_chosen_tip">长按拖拽排序</string>
    <string name="index_tag_setting_edit_btn_string">编辑</string>
    <string name="index_tag_setting_finish_btn_string">完成</string>
    <string name="index_tag_setting_unchosen_title">标签推荐</string>
    <string name="index_tag_setting_unchosen_tip">点击添加标签</string>
    <string name="article_subscribe_btn_string">+ 关注</string>
    <string name="article_comment_btn_string">说点什么吧</string>
    <string name="article_col_subscribe_btn_string">+关注</string>
    <string name="article_like_unlogin_warning_string">您当前还未登录</string>
    <string name="message_title_bar_string">消息</string>
    <string name="message_interaction_string">互动消息</string>
    <string name="message_system_string">通讯录</string>
    <string name="message_other_string">新朋友</string>
    <string name="message_nirvana_msg_string">牛信</string>
    <string name="message_new_nirvana_msg_string">新牛信</string>
    <string name="message_add_friend_string">添加新朋友</string>
    <string name="message_interaction_article_string">原文</string>
    <string name="message_interaction_comment_reply_btn_string">回复</string>
    <string name="list_end_string"><![CDATA[- o((>ω< ))o 我是有底线的 -]]></string>
    <string name="notice">提示</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="update_error_1">发现新版本，不授予相关权限无法更新应用</string>
    <string name="download_progress">下载进度</string>
    <string name="notice_new_version">发现新版本</string>
    <string name="update_now">立即更新</string>
    <string name="update_next">下次再说</string>
    <string name="apk_install_permission">"安装应用需要打开未知来源权限，请去设置中开启权限"</string>
    <string name="open_now">"立即开启"</string>
    <string name="download_fail">"下载失败"</string>
    <string name="update_forbiten">"牛蛙拿为流氓软件，禁止不更新最新版本！"</string>
    <string name="update_forbiten_1">"本次是小兔子放你一马，我是乖乖乐园的叛徒，耶耶~~~"</string>
    <string name="game_name_0">"小熊小兔一套"</string>
    <string name="game_name_1">"暴力小熊一只"</string>
    <string name="game_name_2">"帅气小熊一只"</string>
    <string name="game_name_3">"疑惑小熊一只"</string>
    <string name="game_name_4">"神经小达一只"</string>
    <string name="game_name_5">"软弱小兔一只"</string>
    <string name="game_name_6">"垃圾小兔子一只"</string>
    <string name="game_name_7">"熊兔骑一套"</string>
    <string name="game_obtain">"恭喜你获得 %s"</string>
    <string name="mobile_error">"手机号不正确"</string>
    <string name="verify_error">"请进行牛蛙呐牛币验证"</string>
    <string name="verify_error_2">"请进行牛蛙呐验证并阅读协议"</string>
    <string name="account_error">"账号格式错误"</string>
    <string name="empty_data">"牛蛙呐暂无该分类数据，等你填充~"</string>
    <string name="empty_data_2">"熊市荣耀，您的账户数据惨遭平仓！"</string>
    <string name="empty_data_3">"野熊丢失，小熊子努力填充这类数据"</string>
    <string name="empty_data_4">"网络出错！熊的疑惑"</string>
    <string name="login_toast">"登录解锁更多姿势哟~"</string>
    <string name="search_article">"搜索文章、专题、用户"</string>
    <string name="search_article_2">"搜索趋势"</string>
    <string name="search_article_3">猜你想搜</string>
    <string name="search_article_4">搜索发现</string>
    <string name="search_article_type">"按时间"</string>
    <string name="search_article_type_2">按热度</string>
    <string name="search_history">历史记录</string>
    <string name="search_history_delete">全部删除</string>
    <string name="search_guess_change">换一批</string>

    <string name="crash_error_occurred_explanation">发生意外错误.\n造成不便深感抱歉</string>
    <string name="crash_error_restart_app">重新启动应用</string>
    <string name="crash_error_close_app">关闭应用</string>
    <string name="crash_error_details">错误详细资料</string>
    <string name="crash_error_details_title">错误细节</string>
    <string name="crash_error_details_close">关闭</string>
    <string name="crash_error_details_copy">复制到剪贴板</string>
    <string name="crash_error_details_copied">已复制到剪贴板</string>
    <string name="crash_error_details_clipboard_label">错误信息</string>
    <string name="crash_error_file">错误日志保存路径</string>
    <string name="crash_file_permission">牛蛙呐需要获取你的存储权限,否则无法使用!</string>
    <string name="talk_permission">牛蛙呐需要获取你的麦克风权限,否则无法使用聊天功能!</string>
    <string name="data_not_belong">该数据暂时不属于牛蛙呐站内资源!</string>
    <string name="privacy_policy_content">感谢您使用牛蛙呐！\n我们依据最新的监管要求更新了《隐私政策》特向您说明如下：\n1. 为向您提供交易相关基本功能，我们会收集、使用必要的信息；\n2. 基于您的明示授权我们会获取存储权限，用于保存文章分享图，您有权拒绝或取消授权；\n3. 我们会采取安全措施保护您的信息安全；\n4. 未经您同意，我们不会从第三方处获取、共享或向其提供您的信息。</string>
    <string name="privacy_policy_content_link">《隐私政策》</string>


    <string name="develop_community_subscript_fans">发表 %s 粉丝 %s</string>
    <string name="all">所有</string>

    <!-- 聊天   -->
    <string name="jmui_monday">周一</string>
    <string name="jmui_tuesday">周二</string>
    <string name="jmui_wednesday">周三</string>
    <string name="jmui_thursday">周四</string>
    <string name="jmui_friday">周五</string>
    <string name="jmui_saturday">周六</string>
    <string name="jmui_sunday">周日</string>

    <string name="no_data">暂无数据</string>
    <string name="no_network">网络异常</string>
    <string name="no_network_tip">请检查网络后点击重新加载</string>
    <string name="data_error">数据获取失败</string>
    <string name="network_unavailable_tip">网络连接不可用,请检查网络设置!</string>

    <!-- 玩安卓首页 -->
    <string name="collect_success">收藏成功</string>
    <string name="cancel_collect_success">已取消收藏</string>
    <string name="new_fresh">新</string>
    <string name="top_tip">置顶</string>

    <!-- Menu Action -->
    <string name="action_search">搜索</string>
    <string name="action_share">分享</string>
    <string name="action_like">收藏</string>
    <string name="action_browser">用浏览器打开</string>
    <string name="share_article_url">%1$s分享【%2$s】：%3$s</string>
    <string name="login_tint">请先登录</string>
    <string name="next">下一步</string>
    <string name="previous">上一步</string>
    <string name="verify">提交验证</string>

    <!--  注册相关  -->
    <string-array name="stepLabels">
        <item>填写账号基本信息</item>
        <item>选择注册方式</item>
        <item>输入验证信息</item>
        <item>注册完成</item>
    </string-array>


</resources>