<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/white"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:background="@color/background" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dimen_3">

        <LinearLayout
            android:id="@+id/ll_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_home"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/bottom_index" />

            <TextView
                android:id="@+id/tv_home"
                android:textStyle="bold"
                style="@style/HomeBottomTextThem"
                android:text="@string/activity_main_index_string" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_market"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_market"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/bottom_community" />

            <TextView
                android:id="@+id/tv_market"
                android:textStyle="bold"
                style="@style/HomeBottomTextThem"
                android:text="@string/activity_main_community_string" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_circle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_circle"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/bottom_subscription"/>

            <TextView
                android:id="@+id/tv_circle"
                android:textStyle="bold"
                style="@style/HomeBottomTextThem"
                android:text="@string/activity_main_subscription_string" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/ll_shop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_shop"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/bottom_message" />

            <TextView
                android:id="@+id/tv_shop"
                android:textStyle="bold"
                android:layout_below="@+id/img_shop"
                style="@style/HomeBottomTextThem"
                android:text="@string/activity_main_message_string" />

            <View
                android:id="@+id/v_new_dialog"
                style="@style/NoticeSpot"
                android:layout_toEndOf="@+id/img_shop"
                android:visibility="invisible" />

        </RelativeLayout>

<!--        <LinearLayout-->
<!--            android:id="@+id/ll_shop"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="1"-->
<!--            android:gravity="center"-->
<!--            android:orientation="vertical">-->

<!--            <ImageView-->
<!--                android:id="@+id/img_shop"-->
<!--                android:layout_width="25dp"-->
<!--                android:layout_height="25dp"-->
<!--                android:src="@drawable/bottom_message" />-->

<!--            <TextView-->
<!--                android:id="@+id/tv_shop"-->
<!--                android:textStyle="bold"-->
<!--                style="@style/HomeBottomTextThem"-->
<!--                android:text="@string/activity_main_message_string" />-->

<!--        </LinearLayout>-->

        <LinearLayout
            android:id="@+id/ll_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_mine"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/bottom_me" />

            <TextView
                android:id="@+id/tv_mine"
                android:textStyle="bold"
                style="@style/HomeBottomTextThem"
                android:text="@string/activity_main_me_string" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>