<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlPrimaryColor="@color/white"
        app:srlAccentColor="@color/text_main_color"
        app:srlEnablePreviewInEditMode="true"
        android:paddingBottom="@dimen/dimen_15">

        <com.scwang.smart.refresh.header.MaterialHeader
            android:id="@+id/mh_message_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tb_message_main"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_48"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="@dimen/dimen_40"
                        android:layout_height="match_parent"
                        android:padding="@dimen/dimen_10" />

                    <TextView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/message_title_bar_string"
                        android:textStyle="bold"
                        android:textSize="@dimen/text_16"/>

                    <View
                        android:layout_width="@dimen/dimen_40"
                        android:layout_height="match_parent"
                        android:padding="@dimen/dimen_13" />

                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_80"
                android:paddingVertical="@dimen/dimen_15"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/message_interaction_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:src="@drawable/ic_message_interaction" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_20"
                        android:text="@string/message_interaction_string"
                        android:textAlignment="center"
                        android:textColor="@color/black_text_color"
                        android:textSize="@dimen/text_12" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_message_main_friend_list"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:src="@drawable/ic_message_system" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_20"
                        android:text="@string/message_system_string"
                        android:textAlignment="center"
                        android:textColor="@color/black_text_color"
                        android:textSize="@dimen/text_12" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_message_main_friend"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:src="@drawable/ic_message_other" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimen_20"
                        android:text="@string/message_other_string"
                        android:textAlignment="center"
                        android:textColor="@color/black_text_color"
                        android:textSize="@dimen/text_12" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_10"
                android:layout_marginVertical="@dimen/dimen_10"
                android:background="@color/light_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/dimen_15">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/message_nirvana_msg_string"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/text_14" />

                <TextView
                    android:id="@+id/tv_message_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/message_add_friend_string"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/text_14" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_message_content_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"/>

        </LinearLayout>

    </com.scwang.smart.refresh.layout.SmartRefreshLayout>

</LinearLayout>